# morss-jinaai

./: pyproject.toml
morss/: jina_reader.py  morss.py  wsgi.py
www/: sheet.xsl
